force-app/main/default/objects/Personne__c/Personne__c.object-meta.xml
<CustomObject>
    <label>Personne</label>
    <nameField>
        <label>Nom personne</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Personnes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>