force-app/main/default/objects/Personne__c/fields/Date_de_naissance__c.field-meta.xml
<CustomField>
    <fullName>Date_de_naissance__c</fullName>
    <label>Date de naissance</label>
    <required>true</required>
    <type>Date</type>
</CustomField>