force-app/main/default/objects/Personne__c/fields/Lieu_de_naissance__c.field-meta.xml
<CustomField>
    <fullName>Lieu_de_naissance__c</fullName>
    <label>Lieu de naissance</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>