force-app/main/default/objects/Personne__c/fields/Nationalite__c.field-meta.xml
<CustomField>
    <fullName>Nationalite__c</fullName>
    <label>Nationalite</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>