force-app/main/default/objects/Personne__c/fields/Prenom__c.field-meta.xml
<CustomField>
    <fullName>Prenom__c</fullName>
    <label>Prenom</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>