force-app/main/default/objects/Personne__c/fields/telephone__c.field-meta.xml
<CustomField>
    <fullName>telephone__c</fullName>
    <label>telephone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>